--- a/templates/index.html
+++ b/templates/index.html
@@ -50,19 +50,7 @@
             <div class="rankings-header">
                 <h3>Driver Rankings</h3>
                 <div class="stats-legend">
-                    <span class="legend-note">Sorted by:</span>
-                    <span class="legend-item">
-                        <span class="legend-badge elo-badge">ELO</span> Global ELO Rating
-                    </span>
-                    <!-- Future: Add sorting by Q/R ELO -->
-                    <!--
-                    <span class="legend-item">
-                        <span class="legend-badge qual-badge">Q</span> Qualifying ELO
-                    </span>
-                    <span class="legend-item">
-                        <span class="legend-badge race-badge">R</span> Race ELO
-                    </span>
-                    -->
+                    <span class="legend-note">Sorted by: Era-Adjusted ELO Rating</span>
                 </div>
             </div>
             
