--- a/static/css/style.css
+++ b/static/css/style.css
@@ -147,6 +147,16 @@ nav {
     color: var(--text-primary);
     text-decoration: none;
     font-weight: 500;
+    transition: color 0.3s;
+}
+
+.nav-link:hover {
+    color: var(--f1-red);
+}
+
+.nav-link.active {
+    color: var(--f1-red);
+    font-weight: 700;
 }
 
 /* Filter Section */
